<resources>
    <string name="app_name">Electric Car Financing</string>
    <string name="btPayment">Car Payment</string>
    <string name="hint1">Number of Years</string>
    <string name="hint2">Car Loan Amount</string>
    <string name="hint3">Interest Rate</string>
    <string name="ivDescription">Number of Years Image</string>
    <string name="ivPayment">Monthly Payment</string>
    <string name="tvTitle">Electric Car Financing</string>
    <string name="ivOpening">Opening image</string>
</resources>